--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <!-- <div class="container-fluid"> -->
                     <a class="navbar-brand" href="">tindog</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar01"
                         aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +48,6 @@
                         </ul>
                     </div>
 
-                <!-- </div> -->
             </nav>
 
             <!-- Title -->
@@ -79,17 +77,17 @@
 
         <!-- <div class="container"> -->
             <div class="row">
-                <div class="feature-box col-lg-4 text-center">
+                <div class="feature-box col-lg-4">
                     <i class="icon fa-solid fa-circle-check fa-4x"></i>
                     <h3>Easy to use.</h3>   
                     <p>So easy to use, even your dog could do it.</p> 
                 </div>
-                <div class="feature-box col-lg-4 text-center">
+                <div class="feature-box col-lg-4">
                     <i class="icon fa-solid fa-bullseye fa-4x"></i>
                     <h3>Elite Clientele</h3>
                     <p>We have all the dogs, the greatest dogs.</p>
                 </div>
-                <div class="feature-box col-lg-4 text-center">
+                <div class="feature-box col-lg-4">
                     <i class="icon fa-solid fa-heart fa-4x"></i>
                     <h3>Guaranteed to work.</h3>
                     <p>Find the love of your dog's life or your money back.</p>
@@ -105,7 +103,7 @@
     <section id="testimonials">
 
         <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-        <img src="images/dog-img.jpg" alt="dog-profile">
+        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em>
 
         <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -118,10 +116,10 @@
     <!-- Press -->
 
     <section id="press">
-        <img src="images/TechCrunch.png" alt="tc-logo">
-        <img src="images/tnw.png" alt="tnw-logo">
-        <img src="images/bizinsider.png" alt="biz-insider-logo">
-        <img src="images/mashable.png" alt="mashable-logo">
+        <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
+        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
     </section>
 
