--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </nav>
 
             <!-- Title -->
-            <div class="row">
+            <div class="title row">
                 <div class="col-lg-6">
                     <h1>Meet new and interesting dogs nearby.</h1>
                     <button class="btn btn-dark btn-lg download-button" type="button">
@@ -63,7 +63,7 @@
                         Download
                     </button>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-center">
                     <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
                 </div>
             </div>
