--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="">tindog</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar01"
-                        aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar01">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Download</a>
-                            </li>
-                        </ul>
-                    </div>
+                <a class="navbar-brand" href="">tindog</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar01"
+                    aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar01">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Download</a>
+                        </li>
+                    </ul>
+                </div>
 
             </nav>
 
@@ -76,23 +76,23 @@
     <section id="features">
 
         <!-- <div class="container"> -->
-            <div class="row">
-                <div class="feature-box col-lg-4">
-                    <i class="icon fa-solid fa-circle-check fa-4x"></i>
-                    <h3>Easy to use.</h3>   
-                    <p>So easy to use, even your dog could do it.</p> 
-                </div>
-                <div class="feature-box col-lg-4">
-                    <i class="icon fa-solid fa-bullseye fa-4x"></i>
-                    <h3>Elite Clientele</h3>
-                    <p>We have all the dogs, the greatest dogs.</p>
-                </div>
-                <div class="feature-box col-lg-4">
-                    <i class="icon fa-solid fa-heart fa-4x"></i>
-                    <h3>Guaranteed to work.</h3>
-                    <p>Find the love of your dog's life or your money back.</p>
-                </div>
+        <div class="row">
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-circle-check fa-4x"></i>
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your dog could do it.</p>
             </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-bullseye fa-4x"></i>
+                <h3>Elite Clientele</h3>
+                <p>We have all the dogs, the greatest dogs.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-heart fa-4x"></i>
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your dog's life or your money back.</p>
+            </div>
+        </div>
         <!-- </div> -->
 
     </section>
@@ -101,16 +101,35 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.
+                    </h2>
+                    <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+                    <em>Pebbles, New York</em>
+                </div>
+                <div class="carousel-item">
+                    <h2>My dog used to be so lonely, but with TinDog's help, they've found the
+                        love of their life. I think.</h2>
+                    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+                    <em>Beverly, Illinois</em>
+                </div>
+            </div>
 
-        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-        <em>Pebbles, New York</em>
-
-        <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </section>
+
 
 
     <!-- Press -->
@@ -122,7 +141,6 @@
         <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
     </section>
-
 
     <!-- Pricing -->
 
