add press section and pricing section

--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
     <section id="features">
 
         <!-- <div class="container"> -->
-        <div class="row">
-            <div class="feature-box col-lg-4">
+        <div class="row row-cols-1 row-cols-lg-3">
+            <div class="feature-box col">
                 <i class="icon fa-solid fa-circle-check fa-4x"></i>
                 <h3>Easy to use.</h3>
                 <p>So easy to use, even your dog could do it.</p>
             </div>
-            <div class="feature-box col-lg-4">
+            <div class="feature-box col">
                 <i class="icon fa-solid fa-bullseye fa-4x"></i>
                 <h3>Elite Clientele</h3>
                 <p>We have all the dogs, the greatest dogs.</p>
             </div>
-            <div class="feature-box col-lg-4">
+            <div class="feature-box col">
                 <i class="icon fa-solid fa-heart fa-4x"></i>
                 <h3>Guaranteed to work.</h3>
                 <p>Find the love of your dog's life or your money back.</p>
@@ -149,33 +149,58 @@
         <h2>A Plan for Every Dog's Needs</h2>
         <p>Simple and affordable price plans for your and your dog.</p>
 
-
-        <h3>Chihuahua</h3>
-        <h2>Free</h2>
-        <p>5 Matches Per Day</p>
-        <p>10 Messages Per Day</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-
-
-        <h3>Labrador</h3>
-        <h2>$49 / mo</h2>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-
-
-        <h3>Mastiff</h3>
-        <h2>$99 / mo</h2>
-        <p>Pirority Listing</p>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-
+        <div class="row">
+            <div class="pricing-box col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Chihuahua</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>Free</h2>
+                        <p>5 Matches Per Day</p>
+                        <p>10 Messages Per Day</p>
+                        <p>Unlimited App Usage</p>
+                        <div class="d-grid">
+                            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pricing-box col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Labrador</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$49 / mo</h2>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <div class="d-grid">
+                            <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pricing-box col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Mastiff</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$99 / mo</h2>
+                        <p>Pirority Listing</p>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <div class="d-grid">
+                            <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
 
     <!-- Call to Action -->
 
